--- a/app/src/main/res/layout/activity_month.xml
+++ b/app/src/main/res/layout/activity_month.xml
@@ -22,10 +22,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@null"
-            android:backgroundTint="#136516"
+            android:backgroundTint="?attr/colorPrimary"
             android:onClick="previousMonthAction"
             android:text="PREV"
-            android:textColor="#FFFFFF"
+            android:textColor="?attr/colorOnPrimary"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -36,7 +36,7 @@
             android:layout_weight="2"
             android:text="Feb 2021"
             android:textAlignment="center"
-            android:textColor="@color/black"
+            android:textColor="?attr/colorCalendarText"
             android:textSize="20sp" />
 
         <Button
@@ -45,10 +45,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="@null"
-            android:backgroundTint="#136516"
+            android:backgroundTint="?attr/colorPrimary"
             android:onClick="nextMonthAction"
             android:text="next"
-            android:textColor="#FFFFFF"
+            android:textColor="?attr/colorOnPrimary"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -67,7 +67,7 @@
             android:layout_weight="1"
             android:text="SUN"
             android:textAlignment="center"
-            android:textColor="#888"
+            android:textColor="?attr/colorCalendarOutline"
             android:textSize="16sp" />
 
         <TextView
@@ -77,7 +77,7 @@
             android:layout_weight="1"
             android:text="MON"
             android:textAlignment="center"
-            android:textColor="#888"
+            android:textColor="?attr/colorCalendarOutline"
             android:textSize="16sp" />
 
         <TextView
@@ -87,7 +87,7 @@
             android:layout_weight="1"
             android:text="TUE"
             android:textAlignment="center"
-            android:textColor="#888"
+            android:textColor="?attr/colorCalendarOutline"
             android:textSize="16sp" />
 
         <TextView
@@ -97,7 +97,7 @@
             android:layout_weight="1"
             android:text="WED"
             android:textAlignment="center"
-            android:textColor="#888"
+            android:textColor="?attr/colorCalendarOutline"
             android:textSize="16sp" />
 
         <TextView
@@ -107,7 +107,7 @@
             android:layout_weight="1"
             android:text="THUR"
             android:textAlignment="center"
-            android:textColor="#888"
+            android:textColor="?attr/colorCalendarOutline"
             android:textSize="16sp" />
 
         <TextView
@@ -117,7 +117,7 @@
             android:layout_weight="1"
             android:text="FRI"
             android:textAlignment="center"
-            android:textColor="#888"
+            android:textColor="?attr/colorCalendarOutline"
             android:textSize="16sp" />
 
         <TextView
@@ -127,7 +127,7 @@
             android:layout_weight="1"
             android:text="SAT"
             android:textAlignment="center"
-            android:textColor="#888"
+            android:textColor="?attr/colorCalendarOutline"
             android:textSize="16sp" />
 
 
