--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -15,7 +15,7 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/light_accent"
+            android:background="?attr/colorPrimary"
             app:popupTheme="@style/Theme.AnimoCalendar.PopupOverlay" />
 
     </com.google.android.material.appbar.AppBarLayout>
