--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -18,7 +18,7 @@
         <!-- System bar color (bar with time, battery, etc.) -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
 
-        <!-- Customize your theme here. -->
+        <!-- App main font (mandatory.) -->
         <item name="android:fontFamily">@font/inter</item>
 
         <!-- Important: Prevents crashing -->
@@ -38,6 +38,31 @@
     <style name="Theme.AnimoCalendar.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
 
 
+    <!-- Dark Mode -->
+    <style name="Dark" parent="Theme.Material3.Dark">
+        <!-- Primary brand color -->
+        <item name="colorPrimary">@color/light_accent</item>
+        <item name="colorPrimaryVariant">@color/light_accent_variant</item>
+        <item name="colorOnPrimary">@color/white</item>
+
+        <!-- Background color -->
+        <item name="android:colorBackground">@color/black</item>
+        <item name="colorOnBackground">@color/white</item> <!-- Color used on navbar -->
+        <item name="colorCalendarText">@color/white</item> <!-- Color used on calendar -->
+        <item name="colorCalendarOutline">@color/dark_outline
+        </item> <!-- Color used for calendar outline -->
+
+        <!-- System bar color (bar with time, battery, etc.) -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+        <!-- App main font (mandatory.) -->
+        <item name="android:fontFamily">@font/inter</item>
+
+        <!-- Important: Prevents crashing -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
+    </style>
+
     <!-- Halloween Theme -->
     <style name="Halloween" parent="Theme.Material3.Light">
         <!-- Primary brand color -->
@@ -50,6 +75,16 @@
         <item name="colorOnBackground">@color/hw_accent_txt</item> <!-- TODO -->
         <item name="colorCalendarText">@color/white</item>
         <item name="colorCalendarOutline">@color/hw_outline</item>
+
+        <!-- System bar color (bar with time, battery, etc.) -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+        <!-- App main font (mandatory.) -->
+        <item name="android:fontFamily">@font/inter</item>
+
+        <!-- Important: Prevents crashing -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <!-- Valentines Theme -->
@@ -64,6 +99,16 @@
         <item name="colorOnBackground">@color/val_accent</item> <!-- TODO -->
         <item name="colorCalendarText">@color/white</item>
         <item name="colorCalendarOutline">@color/val_outline</item>
+
+        <!-- System bar color (bar with time, battery, etc.) -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+        <!-- App main font (mandatory.) -->
+        <item name="android:fontFamily">@font/inter</item>
+
+        <!-- Important: Prevents crashing -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
 
     <!-- Christmas Theme -->
@@ -78,7 +123,18 @@
         <item name="colorOnBackground">@color/xmas_accent</item> <!-- TODO -->
         <item name="colorCalendarText">@color/white</item>
         <item name="colorCalendarOutline">@color/xmas_outline</item>
+
+        <!-- System bar color (bar with time, battery, etc.) -->
+        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+        <!-- App main font (mandatory.) -->
+        <item name="android:fontFamily">@font/inter</item>
+
+        <!-- Important: Prevents crashing -->
+        <item name="windowActionBar">false</item>
+        <item name="windowNoTitle">true</item>
     </style>
+
     <!-- Base application theme. -->
     <style name="Base.Theme.AnimoCalendar" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
