--- a/app/src/main/res/layout/activity_create_task.xml
+++ b/app/src/main/res/layout/activity_create_task.xml
@@ -1,41 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/frameLayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".CreateTaskActivity">
+    android:layout_height="match_parent">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <LinearLayout
         android:id="@+id/linearLayout2"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/linearLayout8"
-            android:layout_width="413dp"
-            android:layout_height="146dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <Button
                 android:id="@+id/createColorButton"
-                android:layout_width="49dp"
-                android:layout_height="38dp"
-                android:layout_marginStart="72dp"
-                android:layout_marginTop="36dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Button"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/createTaskName"
+                android:id="@+id/taskNameEt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
                 android:ems="10"
                 android:inputType="text"
                 android:text="Task Name"
@@ -48,105 +46,77 @@
                 android:id="@+id/finishByText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="60dp"
-                android:layout_marginTop="20dp"
                 android:text="Finish By: "
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/createColorButton" />
 
             <EditText
-                android:id="@+id/createDate"
-                android:layout_width="223dp"
-                android:layout_height="38dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="8dp"
+                android:id="@+id/dateTv"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:ems="10"
                 android:inputType="date"
                 app:layout_constraintStart_toEndOf="@+id/finishByText"
-                app:layout_constraintTop_toBottomOf="@+id/createTaskName" />
+                app:layout_constraintTop_toBottomOf="@+id/taskNameEt" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/linearLayout9"
-            android:layout_width="410dp"
-            android:layout_height="244dp"
-            android:layout_marginTop="3dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout8">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <TextView
                 android:id="@+id/createdByText"
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="4dp"
+                android:layout_marginTop="40dp"
                 android:text="Created By: "
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <ImageView
-                android:id="@+id/imageView"
-                android:layout_width="48dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="16dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/createdByText"
-                tools:srcCompat="@tools:sample/avatars" />
-
             <EditText
-                android:id="@+id/editCreator"
+                android:id="@+id/hostEt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="21dp"
                 android:ems="10"
                 android:inputType="text"
                 android:text="Name"
-                app:layout_constraintStart_toEndOf="@+id/imageView"
-                app:layout_constraintTop_toBottomOf="@+id/createdByText" />
+                app:layout_constraintStart_toEndOf="@+id/createdByText"
+                tools:layout_editor_absoluteY="33dp" />
 
-            <TextView
-                android:id="@+id/taskDesctext"
+            <EditText
+                android:id="@+id/descriptionEt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="8dp"
                 android:text="Task Description"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView" />
+                tools:layout_editor_absoluteY="125dp" />
 
             <TextView
                 android:id="@+id/createTaskDesc"
-                android:layout_width="364dp"
-                android:layout_height="106dp"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="TextView"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/taskDesctext" />
+                app:layout_constraintTop_toBottomOf="@+id/descriptionEt" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/linearLayout10"
-            android:layout_width="407dp"
-            android:layout_height="202dp"
-            android:layout_marginTop="1dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
-            tools:layout_editor_absoluteX="1dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="1dp">
 
             <TextView
                 android:id="@+id/prioText"
-                android:layout_width="124dp"
-                android:layout_height="0dp"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="6dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Priority"
                 android:textColor="@color/black"
                 app:layout_constraintStart_toStartOf="parent"
@@ -154,37 +124,32 @@
 
             <RadioButton
                 android:id="@+id/lowButto"
-                android:layout_width="170dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="8dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Low Priority"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/prioText" />
 
             <RadioButton
                 android:id="@+id/midButto"
-                android:layout_width="170dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="36dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Medium Priority"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/lowButto" />
 
             <RadioButton
                 android:id="@+id/hiButto"
-                android:layout_width="170dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="36dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="High Priority"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/midButto" />
 
             <RadioButton
                 android:id="@+id/urgButto"
-                android:layout_width="170dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="36dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Urgent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/hiButto" />
@@ -192,45 +157,37 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/linearLayout11"
-            android:layout_width="407dp"
-            android:layout_height="175dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout10"
-            tools:layout_editor_absoluteX="1dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <RadioButton
                 android:id="@+id/persButto"
-                android:layout_width="170dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Personal"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/cateText" />
 
             <RadioButton
                 android:id="@+id/acadButto"
-                android:layout_width="170dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="32dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Academic"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/persButto" />
 
             <RadioButton
                 android:id="@+id/holiButto"
-                android:layout_width="170dp"
-                android:layout_height="40dp"
-                android:layout_marginStart="32dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Holiday"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/acadButto" />
 
             <TextView
                 android:id="@+id/cateText"
-                android:layout_width="104dp"
-                android:layout_height="25dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="4dp"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:text="Category"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
@@ -238,33 +195,27 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/linearLayout12"
-            android:layout_width="409dp"
-            android:layout_height="73dp"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout11"
-            tools:layout_editor_absoluteX="1dp">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
 
             <Button
-                android:id="@+id/button3"
-                android:layout_width="107dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="64dp"
-                android:layout_marginTop="12dp"
+                android:id="@+id/cancelBtn"
+                android:layout_width="112dp"
+                android:layout_height="46dp"
                 android:text="CANCEL"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
-                android:id="@+id/createTaskButto"
+                android:id="@+id/createBtn"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="84dp"
-                android:layout_marginTop="12dp"
                 android:text="CREATE"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toEndOf="@+id/button3"
+                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintStart_toEndOf="@+id/cancelBtn"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
-</FrameLayout>
+    </LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
