--- a/app/src/main/res/layout/content_layout.xml
+++ b/app/src/main/res/layout/content_layout.xml
@@ -9,14 +9,7 @@
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:theme="@style/Theme.AnimoCalendar.AppBarOverlay">
-
-        <androidx.appcompat.widget.Toolbar
-            android:id="@+id/toolbar"
-            android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/Theme.AnimoCalendar.PopupOverlay" />
+        android:textColor="?attr/colorOnBackground">
 
     </com.google.android.material.appbar.AppBarLayout>
     
@@ -25,10 +18,12 @@
         android:layout_height="0dp"
         android:id="@+id/activityContainer" />
 
-    <include layout="@layout/content_main" />
+    <include
+        android:id="@+id/include"
+        layout="@layout/content_main" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/addFab"
+        android:id="@+id/mainFab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
@@ -37,5 +32,74 @@
         app:srcCompat="@drawable/baseline_add_24"
         android:backgroundTint="?attr/colorPrimary"
         app:tint="?attr/colorOnPrimary" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddTask"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="145dp"
+        android:backgroundTint="?attr/colorPrimaryVariant"
+        app:srcCompat="@drawable/baseline_playlist_add_check_24"
+        app:tint="?attr/colorOnPrimary"
+        android:visibility="gone" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/fabAddEvent"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:scaleType="fitCenter"
+        android:adjustViewBounds="true"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="@dimen/fab_margin"
+        android:layout_marginBottom="85dp"
+        android:backgroundTint="?attr/colorPrimaryVariant"
+        app:srcCompat="@drawable/baseline_event_24"
+        app:tint="?attr/colorOnPrimary"
+        android:visibility="gone" />
+
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/colorPrimary"
+        app:layout_anchor="@+id/include"
+        app:layout_anchorGravity="top|center"
+        app:popupTheme="@style/Theme.AnimoCalendar.PopupOverlay" />
+
+    <Button
+        android:id="@+id/btnAddEvent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="65dp"
+        android:layout_marginBottom="87dp"
+        android:backgroundTint="?attr/android:colorBackground"
+        android:text="Add Event"
+        android:textColor="?attr/colorOnBackground"
+        android:textSize="15sp"
+        app:strokeColor="?attr/colorOnBackground"
+        app:strokeWidth="2dp"
+        android:clickable="false"
+        android:visibility="gone" />
+
+    <Button
+        android:id="@+id/btnAddTask"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:layout_marginEnd="65dp"
+        android:layout_marginBottom="147dp"
+        android:backgroundTint="?attr/android:colorBackground"
+        android:text="Add Task"
+        android:textColor="?attr/colorOnBackground"
+        android:textSize="15sp"
+        app:strokeColor="?attr/colorOnBackground"
+        app:strokeWidth="2dp"
+        android:clickable="false"
+        android:visibility="gone" />
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
